Fixed an overflow bug in the hero

--- a/src/app/_components/Hero/hero.module.scss
+++ b/src/app/_components/Hero/hero.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   gap: 0.5rem;
   min-height: 100dvh;
-  overflow-x: hidden;
+  overflow: hidden;
   color: v.$secondary-text-color;
   font-family: v.$primary-font;
   .heroInfo {
